# SparkQuick

./: README.md  pyproject.toml
demo/: demo.ipynb
src/sparkquick/: helper.py  main.py
