[tool.poetry]
name = "sparkquick"
version = "0.1.0"
description = ""
authors = ["Yashodhar <yash9288dodabhangi@gmail.com>"]
readme = "README.md"
packages = [{include = "sparkquick", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
