[tool.poetry]
name = "sparkquick"
version = "0.1.0"
description = ""
authors = ["Yashodhar <yash9288dodabhangi@gmail.com>"]
readme = "README.md"
packages = [{include = "sparkquick", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
mkdocs = "^1.6.1"
black = "^24.8.0"
pyspark = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
